--- a/src/main/resources/templates/newStudent.html
+++ b/src/main/resources/templates/newStudent.html
@@ -25,7 +25,7 @@
             <label for="email" class="form-label">Correo Electrónico</label>
             <input type="email" id="email" th:field="*{email}" class="form-control" />
         </div>
-        <button type="submit" class="btn btn-primary">Actualizar</button>
+        <button type="submit" class="btn btn-primary">Crear</button>
         <a href="#" th:href="@{/students}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
