--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -38,6 +38,8 @@
         </tbody>
     </table>
     <a href="/courses/crear" class="btn btn-success">Crear Nuevo Curso</a>
+    <a href="/" class="btn btn-secondary">Volver al Inicio</a>
+
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
