--- a/src/main/resources/templates/newCourse.html
+++ b/src/main/resources/templates/newCourse.html
@@ -21,7 +21,7 @@
             <label for="credits" class="form-label">Créditos</label>
             <input type="number" id="credits" th:field="*{credits}" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-primary">Crear</button>
         <a href="#" class="btn btn-secondary" th:href="@{/courses}">Cancelar</a>
     </form>
 </div>
