--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -36,6 +36,7 @@
     </tbody>
   </table>
   <a href="/students/crear" class="btn btn-success">Crear Nuevo Estudiante</a>
+  <a href="/" class="btn btn-secondary">Volver al Inicio</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
